--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^11.1.5",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^6.1.3",
-    "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^11.1.5",
     "axios": "^1.9.0",
     "babel-eslint": "^10.1.0",
@@ -40,14 +40,13 @@
     "class-validator": "^0.13.2",
     "joi": "^17.13.3",
     "moment": "^2.30.1",
-    "mysql2": "^3.14.3",
+    "mongoose": "^8.17.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "tmp": "^0.2.1",
-    "typeorm": "^0.3.10",
     "ws": "^8.18.3"
   },
   "devDependencies": {
